fixed socials being too small

--- a/src/assets/style/components/user/Profile.css
+++ b/src/assets/style/components/user/Profile.css
@@ -150,9 +150,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 0 4px;
-  width: 16px;
-  height: 16px;
+  width: 24px;
+  height: 24px;
   object-fit: contain;
 }
 
